--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+ 
     <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="style.css">
@@ -44,7 +45,7 @@
       <div><table class="menu">
         <tr>
           <th>
-            <img src="" alt="bienvenido">
+            <img src="inicio.jpeg" alt="bienvenido">
           </th>
         </tr>
         
